[gd_scene load_steps=3 format=3 uid="uid://cpggs1af067qh"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_8bw7v"]
[ext_resource type="Script" path="res://UI/fps.gd" id="2_3p84c"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_8bw7v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -119.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="BerryBush" type="CheckButton" parent="Control"]
layout_mode = 0
offset_right = 133.0
offset_bottom = 31.0
focus_mode = 0
text = "Berry Bush"

[node name="WaterPond" type="CheckButton" parent="Control"]
layout_mode = 0
offset_top = -42.0
offset_right = 139.0
offset_bottom = -11.0
focus_mode = 0
text = "Water Pond"

[node name="Tree" type="CheckButton" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 83.0
offset_bottom = 15.5
grow_vertical = 2
focus_mode = 0
text = "Tree
"

[node name="Rock" type="CheckButton" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 86.0
grow_vertical = 0
focus_mode = 0
text = "Rock
"

[node name="Character" type="CheckButton" parent="Control"]
layout_mode = 1
offset_left = 1.0
offset_top = -81.0
offset_right = 126.0
offset_bottom = -50.0
focus_mode = 0
text = "Character
"

[node name="Campfire" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 2
text = "Campfire"

[node name="Rest" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Rest"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("2_3p84c")

[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_entered" from="Control/BerryBush" to="." method="_on_berry_bush_mouse_entered"]
[connection signal="mouse_exited" from="Control/BerryBush" to="." method="_on_berry_bush_mouse_exited"]
[connection signal="toggled" from="Control/BerryBush" to="." method="_on_berry_bush_toggled"]
[connection signal="mouse_entered" from="Control/WaterPond" to="." method="_on_water_pond_mouse_entered"]
[connection signal="mouse_exited" from="Control/WaterPond" to="." method="_on_water_pond_mouse_exited"]
[connection signal="toggled" from="Control/WaterPond" to="." method="_on_water_pond_toggled"]
[connection signal="mouse_entered" from="Control/Tree" to="." method="_on_tree_mouse_entered"]
[connection signal="mouse_exited" from="Control/Tree" to="." method="_on_tree_mouse_exited"]
[connection signal="toggled" from="Control/Tree" to="." method="_on_tree_toggled"]
[connection signal="mouse_entered" from="Control/Rock" to="." method="_on_rock_mouse_entered"]
[connection signal="mouse_exited" from="Control/Rock" to="." method="_on_rock_mouse_exited"]
[connection signal="toggled" from="Control/Rock" to="." method="_on_rock_toggled"]
[connection signal="mouse_entered" from="Control/Character" to="." method="_on_character_mouse_entered"]
[connection signal="mouse_exited" from="Control/Character" to="." method="_on_character_mouse_exited"]
[connection signal="toggled" from="Control/Character" to="." method="_on_character_toggled"]
[connection signal="pressed" from="Control/Campfire" to="." method="_on_campfire_pressed"]
[connection signal="pressed" from="Control/Rest" to="." method="_on_rest_pressed"]
